Working destructible terrain, needs cleaned up and checked more frequently